--- a/.dev.vars.example
+++ b/.dev.vars.example
@@ -2,3 +2,4 @@ DATABASE_URL=
 FPX_ENDPOINT="fpx.site.com/api"
 GITHUB_API_TOKEN="your_github_api_token_here"
 GITHUB_WEBHOOK_SECRET="your_github_webhook_secret_here"
+ANTHROPIC_API_KEY="your_anthropic_api_key_here"
